@@ -8,33 +8,17 @@ use base 'SPVM::Builder::Config';
 sub new {
   my $self = shift->SUPER::new(@_);
   
-  # global_ccflags
-  unless (defined $self->{global_ccflags}) {
-    $self->global_ccflags([]);
-  }
-  
   return $self;
 }
 
-sub global_optimize {
+sub global_cc_each {
   my $self = shift;
   if (@_) {
-    $self->{global_optimize} = $_[0];
+    $self->{global_cc_each} = $_[0];
     return $self;
   }
   else {
-    return $self->{global_optimize};
-  }
-}
-
-sub global_ccflags {
-  my $self = shift;
-  if (@_) {
-    $self->{global_ccflags} = $_[0];
-    return $self;
-  }
-  else {
-    return $self->{global_ccflags};
+    return $self->{global_cc_each};
   }
 }
 
@@ -49,10 +33,15 @@ sub global_ccflags_each {
   }
 }
 
-sub add_global_ccflags {
-  my ($self, @global_ccflags) = @_;
-  
-  push @{$self->{global_ccflags}}, @global_ccflags;
+sub global_optimize_each {
+  my $self = shift;
+  if (@_) {
+    $self->{global_optimize_each} = $_[0];
+    return $self;
+  }
+  else {
+    return $self->{global_optimize_each};
+  }
 }
 
 1;
@@ -69,55 +58,172 @@ SPVM::Builder::Config::Exe is configuration of creating excutable files of L<spv
 
 Fields is inherited from L<SPVM::Builder::Config> and you can use the following ones.
 
-=head2 global_ccflags
+=head2 global_cc_each
 
-  my $global_ccflags = $config->global_ccflags;
-  $config->global_ccflags($global_ccflags);
+  my $global_cc_each = $config->global_cc_each;
+  $config->global_cc_each($global_cc_each);
 
-Get and set global C<ccflags> that is added to all C<ccflags> of the compiler.
+Get and set a global callback that returns the compiler name for each source file. The call back receives L<SPVM::Bulder::Config> object and optional arguments as a hash reference.
 
-B<Default:>
+B<Optional Arguments:>
 
-  []
+=over 2
+
+=item * source_file
+
+Each source file.
+
+=item * class_name
+
+The class name
+
+=item * cc
+
+The compiler name that is the value after the process of the process of L<cc> or L<cc_each> of L<SPVM::Builder::Config>.
+
+=back
+
+B<Examples:>
+  
+  $config->global_cc_each(sub {
+    my ($config, $args) = @_;
+
+    # Source file
+    my $source_file = $args->{source_file};
+    
+    # Class name
+    my $class_name = $args->{class_name}
+
+    # The compiler name
+    my $cc = $args->{cc};
+    
+    my $global_cc;
+    # C source file
+    if ($source_file =~ /\.c$/) {
+      $global_cc = 'clang';
+    }
+    # C++ source file
+    elsif ($source_file =~ /\.cpp$/) {
+      $global_cc = 'clang++';
+    }
+    
+    return $global_cc;
+  });
 
 =head2 global_ccflags_each
 
   my $global_ccflags_each = $config->global_ccflags_each;
   $config->global_ccflags_each($global_ccflags_each);
 
-Get and set a callback that returns the compiler flags for each source file. The call back receives L<SPVM::Bulder::Config> object and each source file and the class name.
+Get and set a callback that returns the compiler flags for each source file. The call back receives L<SPVM::Bulder::Config> object and optional arguments as a hash reference.
 
-The return values of C<global_ccflags> are added to all C<ccflags> of the compiler.
+B<Optional Arguments:>
+
+=over 2
+
+=item * source_file
+
+Each source file.
+
+=item * class_name
+
+The class name
+
+=item * cc
+
+The compiler name that is the value after the process of the process of L<cc> or L<cc_each> of L<SPVM::Builder::Config>.
+
+=item * ccflags
+
+The compiler flags that is the value after the process of the process of L<ccflags> or L<ccflags_each> of L<SPVM::Builder::Config>.
+
+=back
 
 B<Examples:>
   
   $config->global_ccflags_each(sub {
-    my ($config, $source_file, $class_name) = @_;
+    my ($config, $args) = @_;
+
+    # Source file
+    my $source_file = $args->{source_file};
     
-    my $config_global_ccflags = $config->global_ccflags;
+    # Class name
+    my $class_name = $args->{class_name}
+
+    # The compiler name
+    my $cc = $args->{cc};
+
+    # The compiler name
+    my $ccflags = $args->{ccflags};
     
     my $global_ccflags = [];
     # C source file
     if ($source_file =~ /\.c$/) {
-      $global_ccflags = ['-DFoo', @$config_global_ccflags];
+      $global_ccflags = ['-DFoo', @$ccflags];
     }
     # C++ source file
     elsif ($source_file =~ /\.cpp$/) {
-      $global_ccflags = ['-DBar', @$config_global_ccflags];
+      $global_ccflags = ['-DBar', @$ccflags];
     }
     
     return $global_ccflags;
   });
 
-C<global_ccflags_each> takes precedence over C<global_ccflags>.
+=head2 global_optimize_each
 
-=head2 global_optimize
+  my $global_optimize_each = $config->global_optimize_each;
+  $config->global_optimize_each($global_optimize_each);
 
-  my $global_optimize = $config->global_optimize;
-  $config->global_optimize($global_optimize);
+Get and set a callback that returns the compiler flags for each source file. The call back receives L<SPVM::Bulder::Config> object and optional arguments as a hash reference.
 
-Get and set global C<optimize> that replaces all C<optimize> of the compiler.
+B<Optional Arguments:>
 
-=head1 METHODS
+=over 2
 
-Methods is inherited from L<SPVM::Builder::Config> and you can use the following ones.
+=item * source_file
+
+Each source file.
+
+=item * class_name
+
+The class name
+
+=item * cc
+
+The compiler name that is the value after the process of the process of L<cc> or L<cc_each> of L<SPVM::Builder::Config>.
+
+=item * optimize
+
+The value of optimize that is the value after the process of the process of L<optimize> or L<optimize_each> of L<SPVM::Builder::Config>.
+
+=back
+
+B<Examples:>
+  
+  $config->global_optimize_each(sub {
+    my ($config, $args) = @_;
+
+    # Source file
+    my $source_file = $args->{source_file};
+    
+    # Class name
+    my $class_name = $args->{class_name}
+
+    # The compiler name
+    my $cc = $args->{cc};
+
+    # The compiler name
+    my $optimize = $args->{optimize};
+    
+    my $global_optimize;
+    # C source file
+    if ($source_file =~ /\.c$/) {
+      $global_optimize = '-O3';
+    }
+    # C++ source file
+    elsif ($source_file =~ /\.cpp$/) {
+      $global_optimize = '-O3';
+    }
+    
+    return $global_optimize;
+  });
